# where

./: .gitignore  .qmlls.ini  CMakeLists.txt  LICENSE  Main.qml  README.md  SearchResultDelegate.qml  SearchResultsView.qml  Searchbar.qml  SettingsView.qml  WhereButton.qml  WhereToggleButton.qml  main.cpp  release.yml
.github/workflows/: release.yml
qml/: SearchResultDelegate.qml  SettingsActionView.qml  SettingsButtonsView.qml  SettingsView.qml  WhereRadioButton.qml
resources/: resources.qrc
src/backends/: Backend.hpp  BackendController.cpp  BackendController.hpp  BackendEnumerator.cpp  BackendEnumerator.hpp  BackendInfo.cpp  BackendInfo.hpp  BackendInstance.hpp  BackendLibrary.cpp  BackendLibrary.hpp  CMakeLists.txt  backend.cpp  backends.json
src/core/: CMakeLists.txt  HotKeyEntry.cpp  HotKeyEntry.hpp  HotKeyHandler.cpp  HotKeyHandler.hpp  HotKeyRecorder.cpp  HotKeyRecorder.hpp  HotKeyRepository.cpp  HotKeyRepository.hpp
src/frontend/: ApplicationController.cpp  ApplicationController.hpp  BackendsModel.cpp  BackendsModel.hpp  CMakeLists.txt  HotKeyAdapter.cpp  HotKeyAdapter.hpp  HotKeyController.cpp  HotKeyController.hpp  HotKeyHanlderWorker.cpp  HotKeyHanlderWorker.hpp  ModelController.cpp  ModelController.hpp  SearchController.cpp  SearchController.hpp  SearchResultModel.cpp  SearchResultModel.hpp
src/resources/: resources.qrc
